// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload component onChange handler is called 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="onchange-mock-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-96 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-99"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Upload here
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      class="input"
      data-testid="onchange-mock-upload"
      id="onchange-mock-upload"
      multiple=""
      type="file"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component onChange handler is called on file drop 1`] = `
Array [
  Array [
    Array [],
  ],
  Array [
    Array [
      undefined,
    ],
  ],
  Array [
    Array [
      undefined,
    ],
  ],
]
`;

exports[`Upload component renders correctly 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="default-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      class="input"
      data-testid="default-upload"
      id="default-upload"
      multiple=""
      type="file"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly on mobile 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="mobile-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-153 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-156"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Upload here
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      class="input"
      data-testid="mobile-upload"
      id="mobile-upload"
      multiple=""
      type="file"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with buttonLabel 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="default-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-42"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Choose files
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      class="input"
      data-testid="default-upload"
      id="default-upload"
      multiple=""
      type="file"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with description 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="upload-with-description"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-61"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      class="input"
      data-testid="upload-with-description"
      id="upload-with-description"
      multiple=""
      type="file"
    />
    <p
      class="MuiTypography-root mobile-instructions Typography MuiTypography-body1"
    >
      Please upload your images here
    </p>
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with error 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="default-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-23"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      class="input"
      data-testid="default-upload"
      id="default-upload"
      multiple=""
      type="file"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with restricted file types 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div>
    <label
      for="restricted-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-77 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-80"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
            />
          </svg>
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <input
      accept=".png,.pdf"
      class="input"
      data-testid="restricted-upload"
      id="restricted-upload"
      multiple=""
      type="file"
    />
  </div>
  <div />
</div>
`;
